build/log/idf_py_stdout_output_91163
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/muthuselvan/esp/build/bootloader && /home/muthuselvan/.espressif/python_env/idf6.1_py3.10_env/bin/python /home/muthuselvan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/muthuselvan/esp/build/bootloader/bootloader.bin
Bootloader binary size 0x5320 bytes. 0x2ce0 bytes (35%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi_provisioning.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_provisioning.c.obj 
/home/muthuselvan/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20250929/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-724-ga6e7046c30\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/muthuselvan/esp/build/config -I/home/muthuselvan/esp/main -I/home/muthuselvan/esp/esp-idf/components/esp_libc/platform_include -I/home/muthuselvan/esp/esp-idf/components/freertos/config/include -I/home/muthuselvan/esp/esp-idf/components/freertos/config/include/freertos -I/home/muthuselvan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/muthuselvan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/muthuselvan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/muthuselvan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/muthuselvan/esp/esp-idf/components/freertos/esp_additions/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/dma/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/etm/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/modem/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/muthuselvan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/heap/include -I/home/muthuselvan/esp/esp-idf/components/heap/tlsf -I/home/muthuselvan/esp/esp-idf/components/log/include -I/home/muthuselvan/esp/esp-idf/components/soc/include -I/home/muthuselvan/esp/esp-idf/components/soc/esp32s3 -I/home/muthuselvan/esp/esp-idf/components/soc/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/soc/esp32s3/register -I/home/muthuselvan/esp/esp-idf/components/hal/platform_port/include -I/home/muthuselvan/esp/esp-idf/components/hal/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/hal/include -I/home/muthuselvan/esp/esp-idf/components/esp_rom/include -I/home/muthuselvan/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/muthuselvan/esp/esp-idf/components/esp_rom/esp32s3 -I/home/muthuselvan/esp/esp-idf/components/esp_common/include -I/home/muthuselvan/esp/esp-idf/components/esp_system/include -I/home/muthuselvan/esp/esp-idf/components/esp_system/port/soc -I/home/muthuselvan/esp/esp-idf/components/esp_system/port/include/private -I/home/muthuselvan/esp/esp-idf/components/esp_stdio/include -I/home/muthuselvan/esp/esp-idf/components/xtensa/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/xtensa/include -I/home/muthuselvan/esp/esp-idf/components/xtensa/deprecated_include -I/home/muthuselvan/esp/esp-idf/components/esp_hal_dma/include -I/home/muthuselvan/esp/esp-idf/components/esp_hal_dma/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/esp_hal_usb/include -I/home/muthuselvan/esp/esp-idf/components/esp_hal_usb/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/lwip/include -I/home/muthuselvan/esp/esp-idf/components/lwip/include/apps -I/home/muthuselvan/esp/esp-idf/components/lwip/lwip/src/include -I/home/muthuselvan/esp/esp-idf/components/lwip/port/include -I/home/muthuselvan/esp/esp-idf/components/lwip/port/freertos/include -I/home/muthuselvan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/muthuselvan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/muthuselvan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/muthuselvan/esp/esp-idf/components/esp_wifi/include -I/home/muthuselvan/esp/esp-idf/components/esp_wifi/include/local -I/home/muthuselvan/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/muthuselvan/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/muthuselvan/esp/esp-idf/components/esp_event/include -I/home/muthuselvan/esp/esp-idf/components/esp_phy/include -I/home/muthuselvan/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/muthuselvan/esp/esp-idf/components/esp_netif/include -I/home/muthuselvan/esp/esp-idf/components/nvs_flash/include -I/home/muthuselvan/esp/esp-idf/components/esp_partition/include -I/home/muthuselvan/esp/esp-idf/components/esp_blockdev/include -I/home/muthuselvan/esp/esp-idf/components/esp_http_server/include -I/home/muthuselvan/esp/esp-idf/components/http_parser -I/home/muthuselvan/esp/esp-idf/components/esp_http_client/include -I/home/muthuselvan/esp/esp-idf/components/esp-tls -I/home/muthuselvan/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/muthuselvan/esp/esp-idf/components/mbedtls/port/include -I/home/muthuselvan/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/muthuselvan/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/muthuselvan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/muthuselvan/esp/esp-idf/components/esp_security/include -I/home/muthuselvan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/muthuselvan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/muthuselvan/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/muthuselvan/esp/managed_components/espressif__cjson/cJSON -I/home/muthuselvan/esp/managed_components/espressif__mqtt/include -I/home/muthuselvan/esp/esp-idf/components/tcp_transport/include -I/home/muthuselvan/esp/esp-idf/components/esp_timer/include @"/home/muthuselvan/esp/build/toolchain/cflags" -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/muthuselvan/esp=. -fmacro-prefix-map=/home/muthuselvan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi_provisioning.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/wifi_provisioning.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi_provisioning.c.obj -c /home/muthuselvan/esp/main/wifi_provisioning.c
/home/muthuselvan/esp/main/wifi_provisioning.c: In function 'ip_event_handler':
/home/muthuselvan/esp/main/wifi_provisioning.c:395:9: warning: 'IP_EVENT_AP_STAIPASSIGNED' is deprecated: Use IP_EVENT_ASSIGNED_IP_TO_CLIENT instead [-Wdeprecated-declarations]
  395 |         case IP_EVENT_AP_STAIPASSIGNED:
      |         ^~~~
In file included from /home/muthuselvan/esp/esp-idf/components/esp_netif/include/esp_netif.h:13,
                 from /home/muthuselvan/esp/esp-idf/components/esp_wifi/include/esp_wifi_default.h:10,
                 from /home/muthuselvan/esp/esp-idf/components/esp_wifi/include/esp_wifi.h:57,
                 from /home/muthuselvan/esp/main/wifi_provisioning.c:12:
/home/muthuselvan/esp/esp-idf/components/esp_netif/include/esp_netif_types.h:102:5: note: declared here
  102 |     IP_EVENT_AP_STAIPASSIGNED __attribute__((deprecated("Use IP_EVENT_ASSIGNED_IP_TO_CLIENT instead")))
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/muthuselvan/esp/main/wifi_provisioning.c:396:9: error: duplicate case value
  396 |         case IP_EVENT_ASSIGNED_IP_TO_CLIENT:
      |         ^~~~
/home/muthuselvan/esp/main/wifi_provisioning.c:395:9: note: previously used here
  395 |         case IP_EVENT_AP_STAIPASSIGNED:
      |         ^~~~
ninja: build stopped: subcommand failed.
